--- a/estilo/style.css
+++ b/estilo/style.css
@@ -28,7 +28,7 @@
 }
 
 body {
-    background-image: linear-gradient(to top, var (--cor1), var (--cor0));
+    background-color: var(--cor0);
     font-family: var(--fonte-padrao);
 }
 
@@ -42,7 +42,7 @@ a.externo::after {
 }
 
 header {
-    background-image: linear-gradient(to bottom, var(--cor3), var(--cor0));
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
     text-align: center;
     padding-top: 30px;
